cmake_minimum_required(VERSION 3.9)

set(SUPPORTED_LANGUAGES "CXX;C")
set(CMAKE_CXX_STANDARD 17 CACHE STRING "CXX STANDARD VERSION 11,14,17")

set(X_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(X_EXTERNAL_DIR ${X_ROOT_DIR}/external)

project(OpenGL_Sample LANGUAGES ${SUPPORTED_LANGUAGES})

include(cmake/modules.cmake)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})

if (MSVC)
	set(CMAKE_DEBUG_POSTFIX "d")
	add_definitions(-D_CRT_SECURE_NO_WARNNING)
endif()

add_subdirectory(src)
add_subdirectory(examples)
